# hsi-rgbd-calibkit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
assets/calibration_targets/: README.md  dimensions.yaml
configs/: li_wen_qiu.yaml  oak_alignment.yaml
configs/boards/: board_charuco_apriltag.yaml
configs/patterns/: li_wen_qiu_pattern.yaml
datasets/sample_session/: session.yaml
datasets/sample_session/cal_method/: cal_method_output.yaml
datasets/sample_session/hsi/: metadata.yaml
datasets/sample_session/oak/: depth_config.yaml  intrinsics.yaml
docs/: artifact_spec.md  li_wen_qiu_math.md  li_wen_qiu_method.md  running_calibration.md  setup.md  targets.md  validation.md
scripts/: analyze_cross_ratio.py  analyze_v_ordering.py  calibrate.py  derive_cross_ratio.py  diagnose_jk.py  export_artifact.py  extended_stress_test.py  generate_sample_images.py  generate_viz_plots.py  sim_run_li_wen_qiu.py  stress_test_cross_ratio.py  test_closed_form.py  test_cross_ratio_mapping.py  test_full_pipeline.py  validate.py
src/hsi_rgbd_calib/: __init__.py  cli.py
src/hsi_rgbd_calib/boards/: __init__.py  charuco.py  geometry.py  li_wen_qiu_pattern.py  target_metadata.py
src/hsi_rgbd_calib/cal_method/: __init__.py  interface.py  python_backend.py  stub_backend.py
src/hsi_rgbd_calib/common/: __init__.py  frames.py  logging.py  (+1 more)
tests/: conftest.py  test_artifact_schema.py  test_cal_method.py  test_cli.py  test_li_wen_qiu_closed_form.py  test_li_wen_qiu_cross_ratio.py  test_li_wen_qiu_end_to_end.py  test_li_wen_qiu_geometry.py  test_li_wen_qiu_nonlinear.py  test_transforms.py  test_visualization.py
(+25 files in other folders)
